<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_posting_appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:minHeight="0dp"
            app:contentInsetStart="0dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/iv_posting_appbar_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_share_back_btn"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_posting_appbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/appbar_posting_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Wable.Body1"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_posting_appbar"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:dividerColor="@color/gray_300"
        app:layout_constraintBottom_toBottomOf="@id/appbar_posting_appbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/margin_bottom"
        app:layout_constraintBottom_toTopOf="@id/divider_posting_upload_bar"
        app:layout_constraintTop_toBottomOf="@id/appbar_posting_appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_posting_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_posting_title"
                android:maxLength="500"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.Wable.Head1"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_700"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/dummy" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_posting_photo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="312:200"
                app:layout_constraintTop_toBottomOf="@id/et_posting_title"
                app:layout_constraintVertical_bias="0"
                app:shapeAppearance="@style/WableRoundedImage8"
                tools:src="@color/purple_50" />

            <ImageView
                android:id="@+id/iv_posting_photo_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_horizontal"
                android:layout_marginEnd="@dimen/padding_horizontal"
                android:clickable="true"
                android:src="@drawable/ic_home_img_delete_btn"
                app:layout_constraintEnd_toEndOf="@id/iv_posting_photo"
                app:layout_constraintTop_toTopOf="@id/iv_posting_photo" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_posting_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="iv_posting_photo, iv_posting_photo_delete" />

            <EditText
                android:id="@+id/et_posting_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:autoLink="web"
                android:background="@null"
                android:gravity="top|start"
                android:hint="@string/hint_posting_content"
                android:importantForAutofill="no"
                android:maxLength="500"
                android:textColor="@color/gray_800"
                android:textColorHint="@color/gray_500"
                android:textColorLink="@color/gray_800"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_posting_photo"
                tools:text="@string/dummy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_posting_upload_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="@color/gray_100"
        app:layout_constraintBottom_toTopOf="@id/cl_posting_upload_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_posting_upload_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iv_posting_photo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_posting_img_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_posting_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_horizontal"
            android:text="@string/tv_posting_progress_base"
            android:textAppearance="@style/TextAppearance.Wable.Caption4"
            android:textColor="@color/gray_600"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_posting_upload"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_posting_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:background="@drawable/shape_fill_20_rect"
            android:backgroundTint="@color/gray_200"
            android:enabled="false"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="14dp"
            android:paddingVertical="6dp"
            android:text="@string/btn_posting_upload"
            android:textAppearance="@style/TextAppearance.Wable.Body3"
            android:textColor="@color/gray_600"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
